--- a/components/Header.scss
+++ b/components/Header.scss
@@ -18,7 +18,7 @@
       flex-direction: column;
       align-items: center;
       width: 100%;
-      max-width: 700px;
+      max-width: 600px;
       gap: 1rem;
       margin-bottom: 2rem;
   
@@ -107,7 +107,7 @@
   
   .search-button {
     display: flex;
-    align-items: center;
+    align-items: right;
     justify-content: center;
     gap: 0.5rem;
   
@@ -138,12 +138,7 @@
       border-radius: 4px;
       border: none;
       box-sizing: border-box;
+      outline:none;
     }
-  }
-  .location-distance {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1rem;
-    width: 100%;
   }
   
